# solver_library

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  function.h  solver.cpp  solver.h  vector.cpp  vector.h
test/: CMakeLists.txt  doctest.h  test_vector.cpp
